# two_week_rust

./: README.md
projects/ToDoList/: 404.html  Cargo.toml
projects/ToDoList/src/: hello.html  lib.rs  main.rs
projects/crud_list/: Cargo.toml  WebPage.html
projects/crud_list/src/: main.rs
projects/enums/: Cargo.toml
projects/enums/src/: main.rs
projects/game_of_life/: Cargo.toml
projects/gen_types/: Cargo.toml
projects/gen_types/src/: main.rs
projects/guessing_game/: Cargo.toml
projects/guessing_game/src/: main.rs
projects/hello_cargo/: Cargo.toml
projects/hello_world/: main  main.rs
projects/philosopher/: Cargo.toml
projects/philosopher/src/: main.rs
projects/postgres/: Cargo.toml
projects/postgres/src/: main.rs
projects/structs/: Cargo.toml
projects/structs/src/: main.rs  reference.rs
projects/variables/: Cargo.toml
projects/variables/src/: data.rs  main.rs
rust_cli/: Cargo.toml
rust_cli/src/: lib.rs  main.rs
