[package]
name = "crud_list"
version = "0.1.0"
authors = ["Alex <doomhotline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burner = "0.2.3"

[server]
ip = "127.0.0.1"
port = "6789"
tls = false

[log]
actix_web = "debug"
webapp = "trace"
